
Changes in JMurmel-1.5.0 relative to JMurmel-1.4.8

 * renamed format to jformat, format-locale to jformat-locale

 * mlib: added format, formatter


Changes in JMurmel-1.4.8 relative to JMurmel-1.4.7
released: 2024-07-17

 * fixes around nested backquotes

 * mlib: added shiftf, rotatef

 * fixed mlib: evaluation order in setf and psetf forms
 * fixed mlib: various fixes re: value forms as places


Changes in JMurmel-1.4.7 relative to JMurmel-1.4.6
released: 2024-05-06

 * changed defun/ define: are now allowed inside labels forms
 * changed car/ cdr: no longer accept strings
 * changed vector-add: add an optional argument "pos"
 * changed append to no longer accept dotted lists (except as the last argument)

 * added macrolet
 * added vector-remove

 * mlib: added mappend, mappend-tails, concatenate

 * fixed setq with multiple assignments and multiple-value-call
 * fixed mlib: evaluation order in push, pushnew, incf, decf
 * fixed mlib: fixed acceptable arguments for "return-type" for map
 * fixed mlib: mapcan/ mapcon will reject dotted lists returned from the function and behave more
   along the lines of what https://gitlab.common-lisp.net/cmucl/cmucl/-/issues/196 suggests


Changes in JMurmel-1.4.6 relative to JMurmel-1.4.5
released: 2024-03-02

 * changed/ fixed cond clauses w/o body to return the primary result of the test-form (was: nil)
 * changed printing of conditions: (write cnd nil) will only print the message, (write cnd t)
   will also print the location info
 * changed mlib: renamed the functions last0, last1, lastn to m%last0, m%last1, m%lastn
 * changed mlib: write-char, terpri, prin1, princ, print and pprint
   now accept an optional output destination
 * changed read-textfile, write-textfile, write-textfile-lines: the optional parameter
  'translate-lineend-p' controls translating from/to OS-dependent lineend character (sequence)s
 * changed read-textfile, read-textfile-lines, write-textfile, write-textfile-lines: