@@ -2,6 +2,7 @@
 Changes in JMurmel-1.5.0 relative to JMurmel-1.4.8
 
  * renamed format to jformat, format-locale to jformat-locale
+ * compiler allows defmacro inside labels forms
 
  * mlib: added format, formatter
 
